--- a/cv/css/red.css
+++ b/cv/css/red.css
@@ -139,14 +139,19 @@ input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
 ========================================================================== */
 
 #back-to-top {
-    background-color: #54686d; /*747474*/
+    background-color: #9e9e9e; /*747474*/
     color: #fafafa;
 }
 #back-to-top:hover {
-    background-color: #999999; /*rgba(0, 0, 0, 0.7);*/
+    background-color: #696969; /*rgba(0, 0, 0, 0.7);*/
 }
 #back-to-top:hover i {
     color: #fff;
+}
+
+.icon-top {
+    width: 22px;
+    padding-top: 7px;
 }
 /* ==========================================================================
 #Buttons
