ajuste ícone topo

--- a/cv/css/red.css
+++ b/cv/css/red.css
@@ -149,7 +149,7 @@ input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
     color: #fff;
 }
 
-.icon-top {
+.icon-topo {
     width: 22px;
     padding-top: 7px;
 }
