ajustes, cores e bordas

--- a/my/base/css/mystyle.css
+++ b/my/base/css/mystyle.css
@@ -24,14 +24,15 @@
 	}
 	
 .fa-pencil {	
+	color:#844c00;
 	}
 	
 .fa-html5 {
-	color: #FFF;
+	color: #a50702;
 		}	
 
 .fa-lightbulb-o {
-	color: #FF6F00;}	
+	color: #ED7D00;}	
 
 .fa-line-chart {
 	color: #EC407A;
