--- a/my/base/css/style-motherbase.css
+++ b/my/base/css/style-motherbase.css
@@ -311,12 +311,12 @@ main {
 	
 .card:nth-of-type(3) .card-icon {
 	height:300px;
-	background-color:#FABB02;
+	background-color:#ffd100;
 	}
 	
 .card:nth-of-type(4) .card-icon {
 	height:300px;
-	background-color:#ff3a3a;
+	background-color:#ff0000;
 	}
 	
 .card:nth-of-type(5) .card-icon { 
