--- a/my/base/css/style-motherbase.css
+++ b/my/base/css/style-motherbase.css
@@ -275,8 +275,7 @@ main {
 	transform:translateZ(0);
 	border: 1px solid;
 	border-color: #d8d8d8;
-	border-bottom-left-radius: 11px;
-	border-bottom-right-radius: 11px;
+	border-radius: 11px;	
 	}
 	
 .card a {
@@ -297,7 +296,10 @@ main {
 	-webkit-box-pack:center;
 	-webkit-justify-content:center;
 	-ms-flex-pack:center;
-	justify-content:center}
+	justify-content:center;
+	border-top-left-radius: 11px;
+	border-top-right-radius: 11px;
+}
 	
 .card:nth-of-type(1) .card-icon { 
 	height:300px;
@@ -316,7 +318,7 @@ main {
 	
 .card:nth-of-type(4) .card-icon {
 	height:300px;
-	background-color:#ff0000;
+	background-color:#E64A19;
 	}
 	
 .card:nth-of-type(5) .card-icon { 
