--- a/css/style.css
+++ b/css/style.css
@@ -113,11 +113,11 @@ hr {
 	color: #f3ca27;
 }
 #menu.navbar-default .navbar-nav > li > a {
-	text-transform: uppercase;
+	/* text-transform: uppercase; */
 	color: #d9e0e2;
-	font-size: 14px; /* 12px; */
-	letter-spacing: 1px;
-	font-weight:500;
+	font-size: 17px; /* 12px; */
+	letter-spacing: 1.3px;
+	font-weight:500;	
 }
 #menu.navbar-default .navbar-nav > li > a:hover {
 	color: #f3ca27;
@@ -154,9 +154,9 @@ header {
 header p {
 	color: #d9e0e2;
 	font-size: 20px;
-	margin-bottom: 80px;
-	text-transform: uppercase;
-	letter-spacing: 1px;
+	margin-top: 20px;
+	margin-bottom: 50px;	
+	letter-spacing: 1.2px;
 }
 .intro-text {
 	position: relative;
@@ -517,7 +517,7 @@ img.img-circle.team-img {
 #testimonials-section {
 	padding: 80px 0;
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#032731+0,032e3a+20,032e3a+100,032731+100 */
-	background: url(../img/testimonials-bg.jpg);
+	background: linear-gradient(to bottom, rgba(0, 0, 0, 0.57) 0%,rgba(0, 0, 0, 0.46) 37%,rgba(0, 0, 0, 0.54) 100%),url(../img/testimonials-bg.jpg);
 	background-size: cover;
 	background-attachment: fixed;
 	color: #E0E0E0;
@@ -614,7 +614,6 @@ label {
 	*/
 	
 }
-
 
 #contact-section .social i.fa:hover {
 	color: #0D394F;
