--- a/css/style.css
+++ b/css/style.css
@@ -166,10 +166,11 @@ header p {
 	padding-bottom: 170px;
 }
 .intro-text H1 {
-	font-size: 67px;
+	font-size: 60px;
 	text-transform: uppercase;
 	color: #d9e0e2;
 	letter-spacing: 2px;
+	text-indent: 16px;
 }
 .color {
 	color: #fdb020;
