--- a/css/style.css
+++ b/css/style.css
@@ -605,20 +605,25 @@ label {
 	margin: 0 10px;
 }
 #contact-section .social i.fa {
-	font-size: 27px;
-	padding: 20px 20px;
+	font-size: 25px;	
+	width: 70px;
+	height: 70px;
+	line-height: 70px;
 	color: #fff;
 	transition: all 0.5s;
-	background: url(../img/contact-mask-1.png) no-repeat;
-	/* background:#0D394F;
-	   border-radius: 100%;
-	*/
+	background-color: #032e3a;
+	/* background: url(../img/contact-mask-1.png) no-repeat; */
+	-webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+	 
+	
 	
 }
 
 #contact-section .social i.fa:hover {
 	color: #0D394F;
-	background: url(../img/contact-mask-2.png) no-repeat; /* background: #f3ca27; */
+	background-color: #fdb020;
+	/* background: url(../img/contact-mask-2.png) no-repeat;  */
 }
 
 #contact-section .btn {
@@ -653,7 +658,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 
 .concerto_icone i.fa {
 	
-padding: 20px 23px !important;
+/* padding: 18px 20px !important; */
 
 }
 .social hr {
