Mudança de cor dos títulos, botões e bullet da sessão Apoio e Portfolio

--- a/my/base/css/mystyle.css
+++ b/my/base/css/mystyle.css
@@ -24,11 +24,11 @@
 	}	
 	
 .fa-laptop {
-	color: #ffbf99;	
+	color: #f7b892;	
 	}	
 
 .fa-cube {
-	color: #e4d5cc;
+	color: #ad343a;
 	}	
 
 .fa-book {	
@@ -96,11 +96,11 @@ header h1{
 	}
 	
 .color-apoio  {
-	color: #0D47A1;
+	color: #33A7D8;
 	}
 	
 .color-portfolio  {
-	color: #388E3C;
+	color: #33B8A7;
 	}
 
 .color-filtro{
