--- a/my/base/css/style-motherbase.css
+++ b/my/base/css/style-motherbase.css
@@ -318,7 +318,7 @@ main {
 	
 .card:nth-of-type(4) .card-icon {
 	height:300px;
-	background-color:#eae12b;
+	background-color:#e8e153;
 	}
 	
 .card:nth-of-type(5) .card-icon { 
