--- a/my/base/css/style-motherbase.css
+++ b/my/base/css/style-motherbase.css
@@ -267,14 +267,14 @@ main {
 .card {
 	width:252px;
 	height:350px;
-	box-shadow:0px 5px 20px 0px rgba(51,73,94,0.05);
+	box-shadow: 0px 3px 8px 0px rgba(33, 33, 33, 0.10);
 	-webkit-transition:box-shadow 0.2s cubic-bezier(0.42, 0, 0.58, 1);
 	transition:box-shadow 0.2s cubic-bezier(0.42, 0, 0.58, 1);
 	margin:0 0 30px 0;
 	-webkit-transform:translateZ(0);
 	transform:translateZ(0);
 	border: 1px solid;
-	border-color: #c7c2c2;
+	border-color: #d8d8d8;
 	border-radius: 11px;	
 	}
 	
@@ -318,7 +318,7 @@ main {
 	
 .card:nth-of-type(4) .card-icon {
 	height:300px;
-	background-color:#f5ec41;
+	background-color:#ffe600;
 	}
 	
 .card:nth-of-type(5) .card-icon { 
