root variables color

--- a/cv/css/base.css
+++ b/cv/css/base.css
@@ -42,6 +42,14 @@
 		vertical-align: baseline;
 	}
 	
+	/* Variables */
+	:root {
+		--color: #2196f3;		
+		--color-hover: #02b2d8;
+	}
+
+
+
 	/* HTML5 display-role reset for older browsers */
 	
 	article, 
