--- a/cv/css/elements.css
+++ b/cv/css/elements.css
@@ -325,7 +325,7 @@
 		
 	
 	.btn-certificado:hover {
-		background: #0090af;
+		background: var(--color);
 		color: #4A4A4A;
 		padding-top: 8px;
 		padding-left: 7px;
@@ -358,13 +358,14 @@
     float: right;
     font-size: 11px;
     text-align: center;
+		transition: ease 500ms;
 		
 		}
 
 		
 	
 	.btn-portfolio:hover {
-		background: #0090af;
+		background: var(--color);
 		color: rgb(255, 255, 255);
 		padding-top: 8px;
 		padding-left: 17px;
