--- a/cv/css/base.css
+++ b/cv/css/base.css
@@ -44,8 +44,8 @@
 	
 	/* Variables */
 	:root {
-		--color: #2196f3;		
-		--color-hover: #02b2d8;
+		--color: #fa8500;		
+		--color-hover: #d87b02;
 	}
 
 	/* HTML5 display-role reset for older browsers */
