--- a/cv/css/elements.css
+++ b/cv/css/elements.css
@@ -318,32 +318,21 @@
 		display: block;
 		border-radius: 5px;
 		float: right;
-		font-size: 11px; 
-		
-		}
-
-		
+		font-size: 11px; 		
+		transition: ease-in-out 250ms;
+	}
 	
 	.btn-certificado:hover {
 		background: var(--color);
-		color: #4A4A4A;
-		padding-top: 8px;
-		padding-left: 7px;
-		padding-right: 7px;
-		display: block;
-		border-radius: 5px;
-		float: right;
-		font-size: 11px;
-			
-		
-		}
-	
-	.btn-certificado .fa {
-		color: #fff;
+		transform: scale(1.2)	rotate(45deg)
 	}
 
-	.btn-certificado .fa:hover {
-		color: #fff;
+	.btn-certificado:hover .fa {		
+		transform: rotate(-45deg)
+	}
+	
+	.btn-certificado .fa {
+		transition: ease-in-out 250ms;
 	}
 
 	.btn-portfolio {
