Update Social Icon

--- a/cv/css/base.css
+++ b/cv/css/base.css
@@ -34,7 +34,7 @@
 		--section-title-lightmode: #565656;
 		--section-title-darkmode: #e1e1e1;
 		--icon-lightmode-color: #252525;
-		--icon-darkmode-color: #636363;
+		--icon-darkmode-color: #4a4a4a;
 		--portfolio-filter-lightmode: #444;
 		--portfolio-filter-darkmode: #c3c3c3;
 		--bg-portfolio-filter-lightmode: #787878;
