--- a/cv/css/elements.css
+++ b/cv/css/elements.css
@@ -132,7 +132,7 @@
 	.btn-green:hover { background: #93a749; }
 	
 	.btn-certificado {
-		background: #636363;
+		background: var(--icon-darkmode-color);
 		color: #fff;
 		padding-top: 8px;
 		padding-left: 7px;
